deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
     serviceAccountName: monitoring
     containers:
     - name: nginx
       image: nginx:latest
       livenessProbe:
         exec:
           command:
           - cat
           - /homework/index.html
         initialDelaySeconds: 30
         periodSeconds: 30
       readinessProbe:
         httpGet:
           path: /index.html
           port: 8000
         initialDelaySeconds: 30
         periodSeconds: 30
       lifecycle:
         postStart:
           exec:
             command: ["bin/sh", "/bin/script.sh"]
         preStop:
           exec:
             command: ["/bin/sh","-c","rm -rf /homework/index.html"]
       ports:
       - containerPort: 8000
       volumeMounts:
       - name: script-sh
         mountPath: /bin/script.sh
         subPath: script.sh
       - name: workdir
         mountPath: /homework
       - name: nginx-conf
         mountPath: /etc/nginx/conf.d/default.conf
         subPath: nginx.conf
       - name:  random-cm
         mountPath: /homework/conf/file
         subPath: file
     dnsPolicy: Default
     volumes:
     - name: script-sh
       configMap:
         name: script-cm
     - name: workdir
       persistentVolumeClaim:
         claimName:  nginx-pvc
     - name: nginx-conf
       configMap:
         name: nginx-conf
     - name: random-cm
       configMap:
         name: random-cm
     nodeSelector:
       homework: "true"
