pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: homework
spec:
  containers:
  - name: nginx
    image: nginx:latest
    lifecycle:
      preStop:
        exec:
          command: ["/bin/sh","-c","rm -rf /homework/index.html"]
    ports:
    - containerPort: 8000
    volumeMounts:
    - name: workdir
      mountPath: /homework
    - name: nginx-conf
      mountPath: /etc/nginx/conf.d/default.conf
      subPath: nginx.conf
  # These containers are run during pod initialization
  dnsPolicy: Default
  volumes:
  - name: workdir
    emptyDir: {}
  - name: nginx-conf
    configMap:
      name: nginx-conf
