nginx-custom-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nginx-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-conf
          readOnly: true
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:1.1.0
        ports:
          - containerPort: 9113
        args: ["-nginx.scrape-uri", "http://localhost/nginx_status"]



      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-configmap
          items:
            - key: default.conf
              path: default.conf


---
apiVersion: v1
kind: Service
metadata:
  name:  nginx-service
  labels:
    app: svc-app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - name: web2
      protocol: TCP
      port: 8080
      targetPort:  9113
