ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec: 
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /homepage(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-service
                port:
                  number: 80
